feat: stabilize anti-bruteforce with JDK 17 : EXO-60540